Lex tree